Implement listconversation endpoint with sqlite3 as database
