# doc/api.yaml
@@ -84,6 +84,15 @@ paths:
                     - $ref: "#/components/schemas/PrivateConversation"
                     - $ref: "#/components/schemas/GroupConversation"
 
+                  type: object
+                  properties:
+                    type:
+                      description: Type of the conversation
+                      type: string
+                      enum:
+                        - personal
+                        - group
+
         "401":
           description: Unauthorized
 
@@ -116,12 +125,12 @@ paths:
                 type: object
                 properties:
                   members:
-                    description: "Identifers of the members of the conversation"
+                    description: Members of the conversation
                     type: array
                     minItems: 1
-                    maxItems: 100
+                    maxItems: 50
                     items:
-                      $ref: "#/components/schemas/UUID"
+                      $ref: "#/components/schemas/User"
 
         "404":
           description: Conversation not found
